--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~49.0.13",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-status-bar": "~1.6.0",
+    "firebase": "9.6.11",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-webview": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
