--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "expo": "~49.0.13",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "9.6.11",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-webview": "^13.6.0"
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
